--- a/src/index.html
+++ b/src/index.html
@@ -4,20 +4,24 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>goit-js-hw-12</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load src="./partials/header.html" icon-path="img/sprite.svg#logo" />
-
-    <main>
-      <!-- Loads the specified .html file -->
-      <load src="./partials/vite-promo.html" />
-      <load src="./partials/badges.html" />
-    </main>
-
-    <load src="./partials/footer.html" />
-
+    <form class="form">
+      <input
+        type="text"
+        class="message"
+        name="message"
+        placeholder="Search images..."
+      />
+      <button type="submit" class="submit">Search</button>
+    </form>
+    <ul class="list"></ul>
+    <div class="button-container">
+      <button class="js-load-more hidden">Load more</button>
+      <span class="js-loader hidden"></span>
+    </div>
     <script type="module" src="./main.js"></script>
   </body>
 </html>
